Fixed a firefox overflow-x bug causing windowHeight issue due to horizontal scrollbar appearing during initial rendering

--- a/browsersync-design/design/scss/intropage.scss
+++ b/browsersync-design/design/scss/intropage.scss
@@ -71,7 +71,8 @@ body {
   color: white;
   font-weight: bold;
   font-size: 165%;
-  text-shadow: 1px 1px 0px #333, 2px 2px 15px #999;;
+  text-shadow: 1px 1px 0px #333, 2px 2px 15px #999;
+  overflow-x: hidden;
 }
 
 .page1-text { opacity: 0; }
